--- a/style.css
+++ b/style.css
@@ -1,8 +1,4 @@
 /*general style start*/
-*{
-    margin: 0;
-    padding: 0;
-}
 @font-face {
     font-family: 'Pretendard-Regular';
     src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
@@ -10,11 +6,12 @@
     font-style: normal;
 }
 body{
-    margin: 0 auto;
-
     font-family: Pretendard-Regular;
     font-size: 16px;
     line-height: 20px;
+}
+body *{
+    margin: 0 auto;
 }
 img{
     vertical-align: bottom;
@@ -49,9 +46,11 @@ header>.postarea{
     width: 130px;
     height: 40px;
     margin-top: 31px;
+    margin-left: 0;
 }
 .headerMenu{
     margin-top: 26px;
+    margin-right: 0;
 }
 .headerMenu>a{
     margin-right: 30px;
@@ -85,14 +84,23 @@ main .columnPost{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin-left: 0;
 }
 main h1{
     width: 695px;
     margin-bottom: 40px;
+    margin-left: 0;
 }
 main p{
     width: 420px;
     margin-bottom: 40px;
+    margin-left: 0;
+}
+main .download{
+    margin-left: 0;
+}
+main img{
+    margin-right: 0;
 }
 /*main style end*/
 
@@ -114,13 +122,16 @@ main p{
     height: 390px;
     border:none;
     border-radius: 30px;
+    margin-left: 0;
 }
 #middle h2{
     width: 510px;
     margin-bottom: 30px;
+    margin-right: 0;
 }
 #middle p{
     width: 510px;
+    margin-right: 0;
 }
 /*middle style end*/
 
@@ -154,10 +165,15 @@ main p{
     width: 378px;
     height: 378px;
     margin-bottom: 72px;
+    margin-left: 0;
+    margin-right: 0;
 }
 /*gallery style end*/
 
 /*galleryLoad style start*/
+hr{
+    width: 1278px;
+}
 #galleryLoad{
     display: flex;
     flex-direction: column;
@@ -194,6 +210,12 @@ main p{
 /*address style end*/
 
 /*subscribe style start*/
+.subarea{
+    margin-left: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
 #subscribe{
     display: flex;
     justify-content: space-between;
@@ -230,7 +252,7 @@ main p{
 }
 #emailInput{
     width: 300px;
-    height: 60px;
+    height: 50px;
     border:none;
     font-size: 16px;
     line-height: 20px;
@@ -247,32 +269,35 @@ main p{
     margin-bottom: 5px;
     margin-right: 6px;
 }
-/*subscribe style end*/
-
-/*footer style start*/
 #footerImage{
     position: relative;
     top: -100px;
-    z-index: -10;
+    z-index: -1000;
 }
+/*subscribe style end*/
+
+/*footer style start*/
 footer{
     width: 1280px;
     height: 160px;
-    position: relative;
-    top: -100px;
     display: flex;
     justify-content: space-between;
+    position: relative;
+    top: -100px;
 }
 .footerLogo{
     width: 226px;
     height: 70px;
     margin-top: 45px;
+    /*margin-left: -50px;*/
+}
+.icons{
+    margin-right: 0;
 }
 .icon{
-    width: 42px;
-    height: 42px;
     margin-top: 58px;
     margin-left: 20px;
+    margin-right: 0;
 }
 /*footer style end*/
 
