Feat: add alert in .download and change theme color

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -8,7 +8,7 @@
 #galleryInfo>h1{
     width: 875px;
     margin-bottom: 40px;
-    color: #D97652;
+    color: #01DFA5;
 }
 #galleryInfo>p{
     width: 710px;
@@ -51,7 +51,7 @@ hr{
     height: 50px;
     border: none;
     border-radius: 40px;
-    background-color: #D97652;
+    background-color: #01DFA5;
     font-size: 16px;
     color: #FFFFFF;
     margin-top: 28px;
