--- a/css/general-style.css
+++ b/css/general-style.css
@@ -83,7 +83,7 @@ button:active {
     height: 50px;
     border: none;
     border-radius: 40px;
-    background-color: #D97652;
+    background-color: #01DFA5;
     font-size: 16px;
     color: #FFFFFF;
     margin-bottom: 40px;
