--- a/css/subscribe.css
+++ b/css/subscribe.css
@@ -51,7 +51,7 @@
     height: 50px;
     border: none;
     border-radius: 40px;
-    background-color: #D97652;
+    background-color: #01DFA5;
     font-size: 16px;
     color: #FFFFFF;
     margin-top: 5px;
