--- a/css/general-style.css
+++ b/css/general-style.css
@@ -28,6 +28,9 @@ h3{
     font-size: 24px;
     line-height: 30px;
 }
+strong{
+    color: #01DFA5;
+}
 .postarea{
     width: 1280px;
 }
@@ -76,6 +79,7 @@ button:active {
     border-radius: 30px;
 }
 .modalElements img{
+    height: 112px;
     margin-top: 60px;
 }
 #okButton{
