--- a/css/gallery.css
+++ b/css/gallery.css
@@ -34,6 +34,12 @@
     margin-right: 0;
     box-shadow: 10px 10px 30px rgb(0, 0, 0, 0.25);
 }
+#gallery>img:hover{
+    width: 430px;
+    height: 430px;
+    margin-bottom: auto;
+    box-shadow: 15px 15px 30px rgb(0, 0, 0, 0.5);
+}
 /*gallery style end*/
 
 /*galleryLoad style start*/
