--- a/css/subscribe.css
+++ b/css/subscribe.css
@@ -32,6 +32,18 @@
     border-radius: 60px;
     background-color: #fff;
 }
+#subscribe button{
+    width: 135px;
+    height: 50px;
+    border: none;
+    border-radius: 40px;
+    background-color: #01DFA5;
+    font-size: 16px;
+    color: #FFFFFF;
+}
+#subscribe span{
+    margin-right: 10px;
+}
 #subscribe img{
     margin-top: 18px;
     margin-bottom: 18px;
